# excel-merge-tool

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.bat  pyproject.toml  update_and_start.bat
.claude/: settings.json
backend/: CLAUDE.md  excel_merge_tool.spec  pyproject.toml
backend/config/: logging.yaml
backend/src/: app.py  extractor.py  logger.py  main.py  mock_server.py
backend/src/api/: compare.py  reports.py
backend/tests/: conftest.py  test_api.py  test_b001_cell_diff.py  test_b002_conflict.py  test_b003_status.py  test_b004_comments.py  test_b005_shapes.py  test_b006_custom_rules.py  test_b007_compare_api.py  test_b008_b009_reports_api.py  test_b036_cell_range.py  test_extractor.py
demo/: report.html
docs/: architecture.md  overview.md  purpose.md  workflow.md
docs/feature/: step1_python_extraction.md  step2_fastapi_server.md  step2_html_generation.md  step3_frontend_ui.md  step4_vba_macro.md
docs/manual/: build.md  getting_started.md  usage.md
frontend/: CLAUDE.md  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
samples/: base.xlsx  file_b.xlsx  file_c.xlsx  mockup_filter_ui.html
samples/B-030_hide_empty_sheets/: README.md  base.xlsx  file_b.xlsx
samples/B-031_col_row_filter/: README.md  base.xlsx  file_b.xlsx
samples/B-032_modal_display/: README.md  base.xlsx  file_b.xlsx
samples/B-033_fullscreen_scroll/: base.xlsx  base_large.xlsx  file_b.xlsx  file_b_large.xlsx
scripts/: build.bat  build.sh  dev.bat  setup.bat  start.bat  start_dev.bat
tasks/: _template.md
tasks/active/: CLAUDE.md  TASK-021.md  (+19 more)
(+121 files in other folders)
